# dialog_bot

./: .env.example  .gitignore  Procfile  README.md  app_logger.py  bot_handlers.py  config.py  create_intents.py  dialog_flow_handler.py  dialogflow_intents.py  handlers.py  intent_handlers.py  logger.py  logs_bot.py  main.py  pyproject.toml  requirements.txt  telegram_bot.py  tg_bot.py  vk_bot.py  vk_long_polling.py
dialogflow_intents/: creation.py  detection.py
